--- a/Frontend/nitj/pubspec.yaml
+++ b/Frontend/nitj/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.3.0
   mobile_scanner: ^6.0.6
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
